Remove outdated README and tutorial files, update Makefile for world simulation, and enhance world.sdf by removing unnecessary models and adjusting paths for meshes.

--- a/Gazebo_CV/workspace/Makefile
+++ b/Gazebo_CV/workspace/Makefile
@@ -1,11 +1,14 @@
-.PHONY: world sim img cam vel bridge go left right stop rv node start
+.PHONY: world worlds bridge start cam rv vel go left right stop
 
-# 启动完整世界
+# 启动完整世界（-s 无头模式渲染更快）
+# 切换到当前目录
 world:
 	gz sim -r world.sdf
-	
 
-# 桥接摄像头和控制话题 (simple.sdf 的 /camera和/cmd_vel)
+worlds:
+	gz sim -r -s world.sdf
+
+# 桥接摄像头和控制话题 (world.sdf 的 /camera和/cmd_vel)
 bridge:
 	ros2 run ros_gz_bridge parameter_bridge /camera@sensor_msgs/msg/Image@gz.msgs.Image /cmd_vel@geometry_msgs/msg/Twist]gz.msgs.Twist
 
@@ -13,14 +16,14 @@ start:
 	colcon build --packages-select learning_node
 	ros2 run learning_node node_helloworld
 
-# 单独桥接摄像头 (simple.sdf 的 /camera)
+# 单独桥接摄像头 (world.sdf 的 /camera)
 cam:
 	ros2 run ros_gz_bridge parameter_bridge /camera@sensor_msgs/msg/Image@gz.msgs.Image
 # 启动 rviz2
 rv:
 	rviz2
 
-# 单独桥接控制话题 (simple.sdf 的 /cmd_vel)
+# 单独桥接控制话题 (world.sdf 的 /cmd_vel)
 vel:
 	ros2 run ros_gz_bridge parameter_bridge /cmd_vel@geometry_msgs/msg/Twist]gz.msgs.Twist
 
